--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 .goida{
   weight: 100px;
   height: 100px;
+  background-image: url(goida.png);
   background-repeat: no-repeat;
   background-size: 10%;
   animation-name: goidaAnim;
