--- a/style.css
+++ b/style.css
@@ -1,19 +1,16 @@
-@keyframes goidaAnim{
-  from{transform: translate3d(0px, 0px, 0px) ;}
-  to{transform: translate3d(100px, 100px, 0px);}
+.cont{
+ color: white;
 }
-.goida{
-  weight: 100px;
-  height: 100px;
-  background-image: url(goida.png);
-  background-repeat: no-repeat;
-  background-size: 10%;
-  animation-name: goidaAnim;
-  animation-duration: 2s;
+body{
+ hyphens: auto;
+ font-size: 40px;
+  background-color: black;
+  margin: 0;
+ padding: 0;
 }
-.niga{
-  
-  weight: 100px;
-  height: 100px;
-  background-color: red;
+.hd{
+ font-size: 50;
+ position: sticky;
+ right: auto;
+ left: auto;
 }
