--- a/style.css
+++ b/style.css
@@ -1,16 +1,27 @@
 .cont{
+ margin: 0;
+ padding: 0;
  color: white;
 }
 body{
  hyphens: auto;
  font-size: 40px;
   background-color: black;
-  margin: 0;
- padding: 0;
+  
 }
+
 .hd{
+ top: 0;
+ padding: 0;
+ margin: 0;
+ width: 100vh;
+ position: fixed;
+ background-color: black;
+}
+.hdt{
  font-size: 50;
- position: sticky;
- right: auto;
- left: auto;
+}
+.pt{
+ top: 150px;
+ position: absolute;
 }
